--- a/docker/Dockerfile.static
+++ b/docker/Dockerfile.static
@@ -2,6 +2,7 @@
 
 FROM alpine:3.21
 
+RUN sed -i 's#https\?://dl-cdn.alpinelinux.org/alpine#https://mirrors.tuna.tsinghua.edu.cn/alpine#g' /etc/apk/repositories
 RUN apk add --update \
   asciidoctor \
   argp-standalone \
